tried to fix magnifying glass on ios

--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,11 @@
    margin: 0;
 
    touch-action: none;
+   user-select: none;
+
+   -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
+   -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
+   -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
 }
 
 body {
